# xcmemory

./: .gitignore  AGENTS.md  HANDOVER.md  README.md  RETRIEVAL_DESIGN.md  config.toml  config.toml.example  fix_memories.py  install.py  pyproject.toml  start_api_only.py  start_server.py  start_server_notorch.py  start_webui.bat  test_llm.py  test_parse.py  update.py
chat/: DESIGN.md  character_card.py  chat_engine.py  config.toml  config.toml.example  llm_client.py  main.py  memory_client.py  prompts.py  requirements.txt
chat/characters/: example.yaml
chat/ui/: terminal_ui.py
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  MEMU_TEXT2MEM_REFERENCE.md  MQL_REFERENCE.md  MQL规范.md  USER_GUIDE.md
examples/: nl_api_example.py
src/xcmemory_interest/: __init__.py  config.py  demo_retrieval.py  demo_subspace_vs_fullspace.py  user_manager.py
src/xcmemory_interest/auxiliary_query/: DESIGN.md  __init__.py  test_all.py
src/xcmemory_interest/basic_crud/: DESIGN.md  __init__.py  basic_crud.py  test_basic_crud.py  vec_db_crud.py
src/xcmemory_interest/docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
src/xcmemory_interest/embedding_coder/: DESIGN.md  __init__.py  model.py  query_encoder.py  test_query_encoder.py
src/xcmemory_interest/graph_query/: DESIGN.md  __init__.py  explorer.py  graph.py
src/xcmemory_interest/lifecycle_manager/: DESIGN.md  __init__.py  core.py  test_access_decay.py  test_lifecycle_update.py
src/xcmemory_interest/mql/: DESIGN.md  __init__.py  dryrun.py  errors.py  interpreter.py  (+5 more)
tests/: __init__.py  test_nl_modules.py
webui/: app.py
(+100 files in other folders)
