[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xcmemory_interest"
version = "0.4.0"
description = "星尘记忆系统 - Structured Memory Retrieval System"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.7",
    "numpy>=1.24",
    "lmdb>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
